plugins {
    id 'idea'
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

////////////////////////////////////////////////////////////////////////////////
//                                [1] [2] 运行、打包                           //
////////////////////////////////////////////////////////////////////////////////
// [1.1] 从命令行运行默认类: gradle run
// [1.2] 从命令行运行某个类: gradle run -DmainClass=Foo
ext {
    project.mainClassName = System.getProperty("mainClass", "misc.auto.ndtagent.upload.UploadFileDemo")
}

// [2] 打包: gradle clean shadowJar [-DmainClass=Foo]
shadowJar {
    mergeServiceFiles('META-INF/spring.*')
    archiveFileName = 'app.jar' // 输出的 jar 包名字
    zip64 =true
}

////////////////////////////////////////////////////////////////////////////////
//                                 [3] Maven 依赖                             //
////////////////////////////////////////////////////////////////////////////////
repositories {
    mavenCentral()
}

ext.versions = [
        logback: '1.3.0-alpha4',
        slf4j  : '1.7.25',
]

dependencies {
    implementation "org.springframework:spring-webmvc:5.2.6.RELEASE"
    implementation "cglib:cglib:3.3.0"
    implementation "com.aliyun.oss:aliyun-sdk-oss:3.7.0"
    implementation "com.alibaba:fastjson:1.2.59"
    implementation "org.apache.commons:commons-lang3:3.8"
    implementation "commons-beanutils:commons-beanutils:1.9.4"
    implementation "cn.afterturn:easypoi-base:4.1.3"
    implementation "com.github.afkbrb:binary-tree-printer:1.0.0"
    implementation "org.freemarker:freemarker:2.3.29"
    implementation "org.apache.poi:poi:4.1.2"
    implementation "com.itextpdf:html2pdf:2.1.7"
    implementation "commons-io:commons-io:2.6"
    implementation "com.baidu.aip:java-sdk:4.12.0"
    implementation 'net.sourceforge.javacsv:javacsv:2.0'
    implementation 'org.apache.commons:commons-text:1.7'
    implementation 'org.apache.kafka:kafka-clients:3.0.0'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'mysql:mysql-connector-java:5.1.46'
    implementation 'org.apache.commons:commons-exec:1.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
    implementation 'org.infobip.lib:popout:2.1.1'
    implementation 'com.oracle.database.jdbc:ojdbc8:12.2.0.1'
    implementation 'org.ehcache:ehcache:3.10.0'
    implementation 'commons-dbutils:commons-dbutils:1.7'
    implementation 'org.apache.any23:apache-any23-encoding:2.7'
    implementation 'com.github.vertical-blank:sql-formatter:2.0.3'
    implementation 'com.trilead:trilead-ssh2:1.0.0-build222'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
    implementation 'com.alibaba:druid:1.2.11'
    implementation 'com.jcraft:jsch:0.1.55'
    implementation 'commons-cli:commons-cli:1.4'
    implementation 'com.jayway.jsonpath:json-path:2.8.0'

    // BigQueue 的依赖
    implementation 'org.slf4j:slf4j-api:1.6.4'
    implementation 'org.slf4j:slf4j-log4j12:1.6.4'
    implementation files('lib/bigqueue-0.7.0.jar')

    testImplementation 'junit:junit:4.12'
    implementation 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    // Log dependencies
    implementation(
            "ch.qos.logback:logback-classic:${versions.logback}", // slf4j-logback 绑定
            "org.slf4j:jcl-over-slf4j:${versions.slf4j}",         // redirect apache commons logging
            "org.slf4j:jul-to-slf4j:${versions.slf4j}",           // redirect jdk util logging
            "org.slf4j:log4j-over-slf4j:${versions.slf4j}",       // redirect log4j
    )
}

////////////////////////////////////////////////////////////////////////////////
//                                    JVM                                     //
////////////////////////////////////////////////////////////////////////////////
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
}
